<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:id="@+id/ver_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_texto"/>
    <Button
        android:id="@+id/captura_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_texto2"/>
    <Button
        android:id="@+id/ver_mensaje_personalizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_texto3"/>
    <Button
        android:id="@+id/ver_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_texto4"/>
        <Button
            android:id="@+id/ver_toastp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_texto5"
            android:background="@drawable/btn_selector"/>
    </LinearLayout>
</RelativeLayout>